# todo

./: .gitignore  Cargo.toml  Readme.md
src/: config.rs  db.rs  format.rs  main.rs  model.rs
src/commands/: add.rs  delete.rs  edit.rs  finish.rs  list.rs  mod.rs  postpone.rs
