[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.19", features = ["derive"] }
serde = {version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ["v4"] }
sled = "0.34"
config = "0.14.0"
crossterm = "0.28.1"
